--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box; /*to include padding and border in total width/height*/
     margin: 0; /*to remove default margins*/
-    padding: 0;
+    padding: 0; /*to remove default margins*/
 }
 
 body{
@@ -37,10 +37,10 @@ header{
     text-shadow: 1px 2px 2px black;
     color: red;
     margin: 4px 10px;
-}
+ }
 
-/*header nav styles*/
-nav {
+ /*header nav styles*/
+ nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -62,7 +62,7 @@ nav {
     background-color: red;
 }
 
-/* indexpage styles*/
+/* index page styles*/
 .page-heading{
     max-width: 100%;
     border: 2px solid;
@@ -99,18 +99,20 @@ nav {
     color: blue;
     font-size: 1em;
  }
+
  .page-heading button a{
     text-decoration: none;
 }
 
+/*Index page container style*/
 .info-container{
    display: flex;
    flex-wrap: wrap;
    gap: 20px;   
- }
+}
  
-
- .sub-container{
+/* index page sub container style*/
+.sub-container{
 
    flex: 1 1 300px;
    padding: 20px;
@@ -123,15 +125,15 @@ nav {
  .sub-container .counter{
    box-sizing: border-box;
    width: 100%;
-}
+ }
 
-.sub-container ul,
-.sub-container ol {
+ .sub-container ul,
+ .sub-container ol {
   padding-left: 20px;
   margin: 0;
 }
 
-
+/* footer style*/
 .footer{
    background-color: gray;
    text-align: center;
@@ -143,38 +145,38 @@ nav {
    border-radius: 2rem;
 }
 
-
+/*login section style*/
 .login-section{
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 1.5em;
-    border: 2px solid;
-    background-color: rgb(193, 179, 179);
-    box-shadow: 2px 2px 3px 4px black;
-    border-radius: 5px;
+   max-width: 800px;
+   margin: 2rem auto;
+   padding: 1.5em;
+   border: 2px solid;
+   background-color: rgb(193, 179, 179);
+   box-shadow: 2px 2px 3px 4px black;
+   border-radius: 5px;
+ }
+
+ .login-section h2{
+   text-align: center;
+   font: italic 24px;
+   margin-top: 0;
+   margin-bottom: 10px;
+   font-weight: bold;
+   padding: 5px;
 }
 
-.login-section h2{
-    text-align: center;
-    font: italic 24px;
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-weight: bold;
-    padding: 5px;
-}
-
+/* Form group styles */
 .form-group{
   max-width: auto;
-  
   padding: 10px;
  }
 
  .form-group div{
    margin-bottom: 10px;
    padding: 10px;
- }
+}
 
-/*label styles*/
+/*form container style*/
 .form-container{
    max-width: 90%; 
    min-width: 300px;
@@ -189,9 +191,9 @@ nav {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    /*background-color: #f9f9f9;*/
    border-radius: 10px;    
-}
+ }
 
-.form-container .form-group label{
+ .form-container .form-group label{
    display: block;
    padding: 5px 0;
    font-size: 1.2rem;
@@ -216,47 +218,48 @@ nav {
     padding: 5px 10px;
     margin: 5px 0;
     background-color: #eee;
-}
+ }
 
-.form-container .form-group select{
+ .form-container .form-group select{
    max-width: 100%;
-    width: 100%;
-    height: 40px;
-    border: 2px solid;
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin: 5px 0;
-    background-color: #eee;
-}
+   width: 100%;
+   height: 40px;
+   border: 2px solid;
+   border-radius: 5px;
+   padding: 5px 10px;
+   margin: 5px 0;
+   background-color: #eee;
+ }
 
-.form-container .form-group textarea {
+ .form-container .form-group textarea {
    height: 60px;
    width: 100%;
    border: 2px solid;
-}
+ }
 
-.form-container .form-group input[type="submit"],
-.button-container button {
-    height: 40px;
-    border-radius: 5px;
-    width: 100px;
-    color: #fff;
-    background-color: blue;
-    cursor: pointer;
-    border: none;
-    font-weight: bold;
-    display: block;
-    margin: 20px auto;
-}
+ .form-container .form-group input[type="submit"],
+ .button-container button {
+   height: 40px;
+   border-radius: 5px;
+   width: 100px;
+   color: #fff;
+   background-color: blue;
+   cursor: pointer;
+   border: none;
+   font-weight: bold;
+   display: block;
+   margin: 20px auto;
+ }
 
  
-.form-group input[type="submit"] :hover {
-    background-color: aqua;
+ .form-group input[type="submit"] :hover {
+   background-color: aqua;
 }
 
+/* Media query for tablets */
 @media (max-width: 768px) {
    .form-container {
-       padding: 15px;
+      padding: 15px;
    }
 
    .form-container .form-group input[type="text"],
@@ -271,11 +274,10 @@ nav {
    }
 }
 
+/* Section container styles */
 .section-container{
    display: flex;  
    flex-wrap: wrap; 
-   
-
  }
 
  .section-container > * {
@@ -283,43 +285,45 @@ nav {
    margin: 30px;
    
 }
- 
+
+/* Side navigation styles */
 .side-nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px; 
-    position: sticky;
-    flex: 1;
-    }
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 30px; 
+   position: sticky;
+   flex: 1;
+   }
 
  .side-nav li{
    gap: 10px;
    list-style-type: none;
  }
  .side-nav a{
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    border: 2px;
-    border-radius: 5px;
-    height: 2rem;
-    background-color: rgb(85, 139, 231);
-    padding: 5px;
-    color: white;
+   text-decoration: none;
+   display: flex;
+   flex-direction: column;
+   margin: 10px;
+   border: 2px;
+   border-radius: 5px;
+   height: 2rem;
+   background-color: rgb(85, 139, 231);
+   padding: 5px;
+   color: white;
  }
 
  .side-nav a:hover{
-    background-color: blue;
+   background-color: blue;
 }
 
 
-
+/* Input container styles */
 .input-container{
-    display: flex;
+   display: flex;
 }
 
+/* table styles */
 table{
    width: 90%;
    border-collapse: collapse;
@@ -328,30 +332,32 @@ table{
    max-width: 100%;
    overflow-x: auto;
    
-}
+ }
 
-th,td {
+ th,td {
    border: 2px solid ;
    padding: 5px;
-   text-align: left;
-      
-}
+   text-align: left;      
+ }
 
-tr{
+ .table-container th{
+   background-color: gray;
+ }
+ tr{
    margin: 10px;
-}
+ }
 
-.table-container{
+ .table-container{
    background-color: rgb(185, 200, 205);
    margin-top: 10px;
    border-radius: 2rem;
    max-width: 100%;
-}
-
-.table-container input[type='text'],
-.table-container input[type='number'],
-.table-container input[type='email'],
-.table-container input[type='date']{
+ }
+ /* table input styles */
+ .table-container input[type='text'],
+ .table-container input[type='number'],
+ .table-container input[type='email'],
+ .table-container input[type='date']{
    display: inline-block;
    width: 50%;
    height: 30px;
@@ -360,65 +366,65 @@ tr{
    border-radius: 5px;
    box-sizing: border-box;
    background-color: white;
-}
+ }
 
-.table-container .checkbox{
+ .table-container .checkbox{
    display: inline;
    margin-left: 10px;
    width: auto;
    
-}
+ }
 
-.table-container select, textarea{
+ .table-container select, textarea{
    width: 50%;
    height: 30px;
    padding-left: 5px;
    border-radius: 5px;
    margin-left: 10px;
    background-color:white;
-}
+ }
 
-.table-container label {
+ .table-container label {
    display: block;
    font-size: 18px;
    
 }
 
+/* button styles */
 .button-container{
   display: flex;
   justify-content: center;
   align-items: center;
-}
+ }
 
-.button-container button{
+ .button-container button{
    padding: 10px;
    margin: 20px 10px;
    border-radius: 5px;
    background-color:  rgb(22, 137, 231);
    border : none;
    color: #fff;
-}
+ }
 
-.button-container button a{
+ .button-container button a{
    text-decoration: none;
    color: #fff;
-   
 }
 
+/* fieldset styles */
 fieldset{margin-top: 10px;}
 
+/* legend styles */
 legend{font-weight: bold;
 text-align: center;
 font-size: 24px;}
 
-.table-container th{
-   background-color: gray;
-}
-
+/* span styles for error message display */
 span{color: red;}
 
 .divstyle{overflow-x: auto;}
 
+/* Media query for tablets */
 @media (max-width: 768px) {
    /* Styles for tablets */
    .nav-link {
@@ -430,6 +436,7 @@ span{color: red;}
    }
 }
 
+/* Media query for mobile device */
 @media (max-width: 480px) {
    /* Styles for mobile devices */
    .nav-link a {
